refactor: arborescence + paths

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,8 @@
 <main class="main">
   <div class="content">
-    <div class="left-side">
-      <h1>{{ title }}</h1>
-      <p>Congratulations! Your app is running. 🎉</p>
-    </div>
+    <app-header></app-header>
     <div class="divider" role="separator" aria-label="Divider"></div>
-    <app-menu-lateral></app-menu-lateral>
+    <app-side-menu></app-side-menu>
   </div>
 </main>
 
