--- a/src/app/core/components/photo-card/photo-card.component.html
+++ b/src/app/core/components/photo-card/photo-card.component.html
@@ -1,3 +1,3 @@
 <mat-card appearance="outlined">
-  <mat-card-content>Simple card</mat-card-content>
+  <mat-card-content><img [src]="photo.path" /></mat-card-content>
 </mat-card>
