--- a/src/app/features/gallery/components/gallery.component.html
+++ b/src/app/features/gallery/components/gallery.component.html
@@ -1,9 +1,7 @@
 <mat-grid-list cols="3">
   @for(photo of gallery.photos; track photo.path){
   <mat-grid-tile>
-    <mat-card appearance="outlined">
-      <mat-card-content><img [src]="photo.path" /></mat-card-content>
-    </mat-card>
+    <app-photo-card [photo]="photo"></app-photo-card>
   </mat-grid-tile>
   } @empty { Aucune photo disponible. }
 </mat-grid-list>
