--- a/src/app/core/components/photo-card/photo-card.component.html
+++ b/src/app/core/components/photo-card/photo-card.component.html
@@ -1,3 +1,9 @@
 <mat-card appearance="outlined">
-  <mat-card-content><img [src]="photo.path" /></mat-card-content>
+  <mat-card-content>
+    @if(photo.path){
+    <img [src]="photo.path" />
+    } @else {
+    <span>Photo inexistante.</span>
+    }
+  </mat-card-content>
 </mat-card>
