--- a/src/app/features/side-menu/components/side-menu.component.html
+++ b/src/app/features/side-menu/components/side-menu.component.html
@@ -3,8 +3,7 @@
       @for (item of sideMenu; track item.title) {
         <a
           class="pill"
-          [href]="item.link"
-          target="_blank"
+          [routerLink]="item.link"
           rel="noopener"
         >
           <span>{{ item.title }}</span>
