--- a/src/app/features/book/components/book.component.html
+++ b/src/app/features/book/components/book.component.html
@@ -1,5 +1,5 @@
 <mat-grid-list cols="3" gutterSize="10">
-  @for(photo of gallery.photos; track photo.path){
+  @for(photo of book.photos; track photo.path){
   <mat-grid-tile>
     <app-photo-card [photo]="photo"></app-photo-card>
   </mat-grid-tile>
