feat: lint + refactor

--- a/src/app/core/components/photo-card/photo-card.component.html
+++ b/src/app/core/components/photo-card/photo-card.component.html
@@ -1,9 +1,5 @@
 <mat-card appearance="outlined">
   <mat-card-content>
-    @if(photo.path){
-    <img [src]="photo.path" />
-    } @else {
-    <span>Photo inexistante.</span>
-    }
+    <img [src]="photo.path" [alt]="photo.name"/>
   </mat-card-content>
 </mat-card>
