--- a/src/app/views/book/components/book.component.html
+++ b/src/app/views/book/components/book.component.html
@@ -3,5 +3,5 @@
   <mat-grid-tile>
     <app-photo-card [photo]="photo"></app-photo-card>
   </mat-grid-tile>
-  } @empty { Aucune photo disponible. }
+  } @empty { Les photos n'ont pas pu être récupérées. }
 </mat-grid-list>
