fix: circular dependency

--- a/src/app/core/components/photo-card/photo-card.component.html
+++ b/src/app/core/components/photo-card/photo-card.component.html
@@ -1,5 +1,5 @@
 <mat-card appearance="outlined">
   <mat-card-content>
-    <img [src]="photo.path" [alt]="photo.name"/>
+    <img [src]="photo.fullPath" [alt]="photo.name"/>
   </mat-card-content>
 </mat-card>
