refactor: view + dummy component

--- a/src/app/views/gallery/gallery.component.html
+++ b/src/app/views/gallery/gallery.component.html
@@ -1,1 +1,1 @@
-<app-photo-gallery [photoGallery]="gallery"></app-photo-gallery>
+<app-photo-gallery [photoGallery]="gallery.photoGallery"></app-photo-gallery>
