refactor: header view + dummy components

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -34,7 +34,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-main {
+.main {
   width: 100%;
   min-height: 50%;
   display: flex;
@@ -43,19 +43,5 @@ main {
   padding: 1rem;
   box-sizing: inherit;
   position: relative;
-}
-
-.content {
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
-  max-width: 700px;
-  margin-bottom: 3rem;
-}
-
-.divider {
-  width: 1px;
-  background: var(--red-to-pink-to-purple-vertical-gradient);
-  margin-inline: 0.5rem;
 }
 
