--- a/src/app/views/header/components/side-menu/side-menu.component.html
+++ b/src/app/views/header/components/side-menu/side-menu.component.html
@@ -1,6 +1,6 @@
 <div class="right-side">
     <div class="pill-group">
-      @for (item of sideMenu; track item.title) {
+      @for (item of sideMenu.menuItems; track item.title) {
         <a
           class="pill"
           [routerLink]="item.link"
