refactor: gallery models

--- a/src/app/views/gallery/components/photo-card/photo-card.component.html
+++ b/src/app/views/gallery/components/photo-card/photo-card.component.html
@@ -1,5 +1,5 @@
 <mat-card appearance="outlined">
   <mat-card-content>
-    <img [src]="photo.fullPath" [alt]="photo.name"/>
+    <img [src]="photo.src" [alt]="photo.alt"/>
   </mat-card-content>
 </mat-card>
