--- a/src/app/views/header/components/title/title.component.html
+++ b/src/app/views/header/components/title/title.component.html
@@ -1,4 +1,4 @@
 <div class="left-side">
   <h1>{{ title }}</h1>
-  <p>Congratulations! Your app is running. 🎉</p>
+  <p>Bienvenue sur mon site. 🎉</p>
 </div>
