--- a/src/app/views/gallery/components/photo-card/photo-card.component.html
+++ b/src/app/views/gallery/components/photo-card/photo-card.component.html
@@ -1,8 +1,8 @@
 <mat-card appearance="outlined">
   <mat-card-header>
-    <mat-card-title>{{photo.alt}}</mat-card-title>
+    <mat-card-title>{{ photo.alt | capitalize }}</mat-card-title>
     <mat-card-subtitle>Acrylique sur toile</mat-card-subtitle>
   </mat-card-header>
   <img mat-card-image [src]="photo.src" [alt]="photo.alt" />
-  <mat-card-content>Description</mat-card-content>
+  <mat-card-content></mat-card-content>
 </mat-card>
