--- a/src/app/views/gallery/components/photo-card/photo-card.component.html
+++ b/src/app/views/gallery/components/photo-card/photo-card.component.html
@@ -4,5 +4,5 @@
     <mat-card-subtitle>Acrylique sur toile</mat-card-subtitle>
   </mat-card-header>
   <img mat-card-image [src]="photo.src" [alt]="photo.alt" />
-  <mat-card-content></mat-card-content>
+  <mat-card-content>Crédit : Marie-Cécile Caron</mat-card-content>
 </mat-card>
