--- a/src/app/views/gallery/components/photo-card/photo-card.component.scss
+++ b/src/app/views/gallery/components/photo-card/photo-card.component.scss
@@ -1,4 +1,4 @@
-:host{
+:host {
   width: 100%;
   height: 100%;
 }
@@ -9,7 +9,7 @@ mat-card {
 }
 
 img {
+  width: 100%;
   height: 100%;
-  max-width: 100%;
   object-fit: contain;
 }
