--- a/src/app/views/login/login.component.scss
+++ b/src/app/views/login/login.component.scss
@@ -1,3 +1,9 @@
-.container mat-form-field + mat-form-field {
-    margin-left: 8px;
+.container {
+  margin: 10px;
+
+  mat-form-field {
+    + mat-form-field, + button {
+      margin-left: 8px;
+    }
   }
+}
