--- a/src/app/views/gallery/gallery.component.html
+++ b/src/app/views/gallery/gallery.component.html
@@ -1,7 +1,7 @@
 <div class="content">
-  @if (gallery$ | async; as gallery) {
+  @if (gallery()) {
     <mat-grid-list cols="3" gutterSize="10">
-      @for (photo of gallery.photos; track photo.alt) {
+      @for (photo of gallery().photos; track photo.alt) {
         <mat-grid-tile class="mat-elevation-z4">
           <app-photo-card [photo]="photo"></app-photo-card>
         </mat-grid-tile>
