--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,23 +1,28 @@
 <div class="container">
-  <mat-form-field>
-    <mat-label>Identifiant</mat-label>
-    <input matInput type="text" [(ngModel)]="id" />
-  </mat-form-field>
+  <div class="content">
+    <mat-form-field>
+      <mat-label>E-mail</mat-label>
+      <input matInput type="email" [(ngModel)]="email" />
+    </mat-form-field>
 
-  <mat-form-field>
-    <mat-label>Mot de passe</mat-label>
-    <input
-      matInput
-      [type]="hide() ? 'password' : 'text'"
-      [(ngModel)]="password" />
-    <button
-      mat-icon-button
-      matSuffix
-      (click)="clickEvent($event)"
-      [attr.aria-label]="'Hide password'"
-      [attr.aria-pressed]="hide()">
-      <mat-icon>{{ hide() ? 'visibility_off' : 'visibility' }}</mat-icon>
+    <mat-form-field>
+      <mat-label>Mot de passe</mat-label>
+      <input
+        matInput
+        [type]="hide() ? 'password' : 'text'"
+        [(ngModel)]="password" />
+      <button
+        mat-icon-button
+        matSuffix
+        (click)="clickEvent($event)"
+        [attr.aria-label]="'Hide password'"
+        [attr.aria-pressed]="hide()">
+        <mat-icon>{{ hide() ? 'visibility_off' : 'visibility' }}</mat-icon>
+      </button>
+    </mat-form-field>
+
+    <button mat-raised-button type="submit" (click)="onSubmit()">
+      Valider
     </button>
-  </mat-form-field>
-  <button mat-raised-button type="submit" (click)="onSubmit()">Valider</button>
+  </div>
 </div>
