--- a/src/app/views/header/header.component.scss
+++ b/src/app/views/header/header.component.scss
@@ -1,13 +1,31 @@
-.divider {
-  width: 1px;
-  background: var(--red-to-pink-to-purple-vertical-gradient);
-  margin-inline: 1.5rem;
+@media screen and (min-width: 500px) {
+  .content {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+    max-width: 700px;
+    margin-bottom: 3rem;
+  }
+
+  .divider {
+    width: 1px;
+    background: var(--red-to-pink-to-purple-vertical-gradient);
+    margin-inline: 1.5rem;
+  }
 }
 
-.content {
-  display: flex;
-  justify-content: space-around;
-  width: 100%;
-  max-width: 700px;
-  margin-bottom: 3rem;
+@media screen and (max-width: 500px) {
+  .content {
+    display: grid;
+    justify-content: start;
+    width: 100%;
+    margin-bottom: 3rem;
+  }
+
+  .divider {
+    height: 1px;
+    background: var(--red-to-pink-to-purple-vertical-gradient);
+    margin-inline: 1.5rem;
+    writing-mode: vertical-lr;
+  }
 }
