--- a/src/app/views/gallery/gallery.component.scss
+++ b/src/app/views/gallery/gallery.component.scss
@@ -1,5 +1,12 @@
+@media screen and (min-width: 500px) {
+  .content {
+    min-width: 1000px;
+    max-width: 1400px;
+  }
+}
+
 .content {
-  margin: 10px;
+  margin: 0 10% 20px;
 }
 
 .center {
