--- a/src/app/views/header/components/title/title.component.scss
+++ b/src/app/views/header/components/title/title.component.scss
@@ -1,16 +1,25 @@
 h1 {
-    font-size: 2.125rem;
-    color: var(--gray-900);
-    font-weight: 500;
-    line-height: 100%;
-    letter-spacing: -0.125rem;
-    margin: 1.75rem 0 0;
-    font-family: "Inter Tight", -apple-system, BlinkMacSystemFont, "Segoe UI",
-      Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-      "Segoe UI Symbol";
-  }
+  font-size: 2.125rem;
+  color: var(--gray-900);
+  font-weight: 500;
+  line-height: 100%;
+  letter-spacing: -0.125rem;
+  margin: 1.75rem 0 0;
+  font-family:
+    'Inter Tight',
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    Helvetica,
+    Arial,
+    sans-serif,
+    'Apple Color Emoji',
+    'Segoe UI Emoji',
+    'Segoe UI Symbol';
+}
 
 p {
-    margin: 1.5rem 0 0;
-    color: var(--gray-700);
-  }
+  margin: 1.5rem 0 0;
+  color: var(--gray-700);
+}
