chore: rename repo

--- a/src/app/views/header/components/side-menu/side-menu.component.html
+++ b/src/app/views/header/components/side-menu/side-menu.component.html
@@ -29,7 +29,7 @@
   </div>
   <div class="social-links">
     <a
-      href="https://github.com/Kuchengeschmack/kuchengeschmack.github.io"
+      href="https://github.com/Kuchengeschmack/artiste-peintre"
       aria-label="Github"
       target="_blank"
       rel="noopener">
