--- a/src/app/views/gallery/components/photo-card/photo-card.component.scss
+++ b/src/app/views/gallery/components/photo-card/photo-card.component.scss
@@ -1,15 +1,26 @@
-:host {
-  width: 100%;
+@use '@angular/material' as mat;
+
+.card {
+  @include mat.elevation(8);
+  display: grid;
+  place-items: center;
+  max-width: 300px;
   height: 100%;
+  overflow: hidden;
 }
 
-mat-card {
-  width: 100%;
-  height: 100%;
+.header {
+  max-width: inherit;
+  height: 50px;
 }
 
-img {
+.img {
   width: 100%;
-  height: 100%;
-  object-fit: contain;
+  height: inherit;
+  object-fit: cover;
+  transition: width 0.3s ease-in-out;
+}
+
+.img:hover {
+  width: 120%;
 }
