--- a/src/app/views/gallery/gallery.component.html
+++ b/src/app/views/gallery/gallery.component.html
@@ -1,23 +1,26 @@
-<div class="content">
-  @if (gallery()) {
-    <mat-grid-list
-      [cols]="breakpoint"
-      gutterSize="10"
-      (window:resize)="onResize($event)">
-      @for (photo of gallery().photos; track photo.alt) {
-        <mat-grid-tile class="mat-elevation-z4">
-          <app-photo-card [photo]="photo"></app-photo-card>
-        </mat-grid-tile>
-      } @empty {
-        Les photos n'ont pas pu être récupérées.
-      }
-    </mat-grid-list>
-  } @else {
-    <mat-progress-spinner
-      class="center"
-      color="primary"
-      mode="indeterminate"
-      value="50">
-    </mat-progress-spinner>
-  }
-</div>
+<article>
+  <div class="content">
+    @if (gallery()) {
+      <mat-grid-list
+        [cols]="breakpoint"
+        gutterSize="10"
+        (window:resize)="onResize($event)"
+        rowHeight="600">
+        @for (photo of gallery().photos; track photo.alt) {
+          <mat-grid-tile>
+            <app-photo-card [photo]="photo"></app-photo-card>
+          </mat-grid-tile>
+        } @empty {
+          Les photos n'ont pas pu être récupérées.
+        }
+      </mat-grid-list>
+    } @else {
+      <mat-progress-spinner
+        class="center"
+        color="primary"
+        mode="indeterminate"
+        value="50">
+      </mat-progress-spinner>
+    }
+  </div>
+</article>
