--- a/src/app/views/gallery/components/photo-card/photo-card.component.scss
+++ b/src/app/views/gallery/components/photo-card/photo-card.component.scss
@@ -2,11 +2,8 @@
 
 .card {
   @include mat.elevation(8);
-  display: grid;
-  place-items: center;
   max-width: 300px;
   height: 100%;
-  overflow: hidden;
 }
 
 .header {
@@ -15,12 +12,21 @@
 }
 
 .img {
+  display: grid;
   width: 100%;
-  height: inherit;
-  object-fit: cover;
-  transition: width 0.3s ease-in-out;
-}
+  height: 100%;
+  overflow: hidden;
+  place-items: center;
 
-.img:hover {
-  width: 120%;
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transition: 1s ease-in-out;
+
+    &:hover {
+      object-fit: cover;
+      transform: scale(1.1);
+    }
+  }
 }
