--- a/src/app/views/gallery/gallery.component.scss
+++ b/src/app/views/gallery/gallery.component.scss
@@ -6,7 +6,14 @@
 }
 
 .content {
-  margin: 0 10% 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 15rem);
+  grid-auto-rows: minmax(20rem, auto);
+  grid-auto-flow: row dense;
+  justify-content: center;
+  place-items: center;
+  gap: 3rem;
+  width: min(100%, 75rem);
 }
 
 .center {
