--- a/src/app/views/gallery/components/photo-card/photo-card.component.scss
+++ b/src/app/views/gallery/components/photo-card/photo-card.component.scss
@@ -1,13 +1,12 @@
 @use '@angular/material' as mat;
 
-.card {
-  @include mat.elevation(8);
-  max-width: 300px;
-  height: 100%;
-}
-
 .header {
-  margin-bottom: 16px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: -32px;
+  padding-top: 0px;
+  padding-bottom: -32px;
+  transition: 1s ease-in-out;
 }
 
 .img {
@@ -16,14 +15,28 @@
   height: 100%;
   overflow: hidden;
   place-items: center;
+}
 
-  img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    transition: 1s ease-in-out;
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  transition: 1s ease-in-out;
+}
 
-    &:hover {
+.card {
+  @include mat.elevation(8);
+  max-width: 300px;
+  height: 100%;
+
+  &:hover {
+    .header {
+      margin-bottom: 0px;
+      padding-top: 16px;
+      padding-bottom: 16px;
+    }
+
+    img {
       object-fit: cover;
       transform: scale(1.1);
     }
