--- a/src/app/views/gallery/components/photo-card/photo-card.component.scss
+++ b/src/app/views/gallery/components/photo-card/photo-card.component.scss
@@ -3,9 +3,8 @@
 .header {
   display: flex;
   justify-content: center;
-  margin-bottom: -32px;
-  padding-top: 0px;
-  padding-bottom: -32px;
+  margin-bottom: -64px;
+  padding-bottom: 16px;
   transition: 1s ease-in-out;
 }
 
@@ -29,11 +28,10 @@ img {
   max-width: 300px;
   height: 100%;
 
-  &:hover {
+  &:hover,
+  &:active {
     .header {
       margin-bottom: 0px;
-      padding-top: 16px;
-      padding-bottom: 16px;
     }
 
     img {
