--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,13 @@
-<main class="main">
+<header class="header">
   <app-header></app-header>
+</header>
+
+<main>
+  <article>
+    <router-outlet />
+  </article>
 </main>
 
-<router-outlet />
+<footer class="footer">
+  <p>Footer</p>
+</footer>
