--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,6 @@
 @use 'core/variables.scss';
 
-.main {
+.header {
   width: 100%;
   min-height: 50%;
   display: flex;
@@ -9,4 +9,8 @@
   padding: 1rem;
   box-sizing: inherit;
   position: relative;
+}
+
+.footer p {
+  text-align: center;
 }
