--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,8 +3,7 @@
 html,
 body {
   height: 100%;
-}
-body {
+  box-sizing: border-box;
   margin: 0;
   font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
