fix: center list

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,14 +39,14 @@ body {
 
 .article {
   padding: 3rem;
+  text-align: center;
 
   h1 {
     font-weight: 700;
   }
 
-  h1,
-  h2,
-  p {
-    text-align: center;
+  ul {
+    display: inline-block;
+    text-align: left;
   }
 }
