--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,15 +26,14 @@
     var(--electric-violet) 100%
   );
 
-  --font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial,
-    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  --font-family: 'Roboto', sans-serif;
 }
 
 html,
 body {
   box-sizing: border-box;
   margin: 0;
-  font-family: --font-family;
+  font-family: var(--font-family);
 }
 
 .article {
